--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@ body{
 .volume-container i{
     margin-right: 5px;
 }
+li{
+    cursor: pointer;
+}
+li.playing{
+    background-color: #0b5eb7;
+    color: #fff;
+}
